# SFML_Portfolio

./: CMakeLists.txt  Games.cpp  Games.h  README.md  Screens.cpp  Screens.h  main.cpp
Projects/: Ball.cpp  Ball.h  BouncingBall.cpp  BouncingBall.h  TopHatGuy.cpp  TopHatGuy.h
Projects/Applications/: Fonts.cpp  Fonts.h  ListItem.cpp  ListItem.h  Position.cpp  Position.h  Screen.cpp  Screen.h  Screens.cpp  Screens.h  States.cpp  States.h  fonts_enum.h  states_enum.h
Projects/Ball/: Ball.cpp  Ball.h
Projects/Battleship/: Battleship.cpp  Battleship.h  Grid.cpp  Grid.h  HiddenGrid.cpp  HiddenGrid.h  Square.cpp  Square.h
Projects/Battleship/Sprites/: BombSprite.cpp  BombSprite.h  Images.cpp  Images.h  MissSprite.cpp  MissSprite.h  OceanSprite.cpp  OceanSprite.h  Ship1Sprite.cpp  Ship1Sprite.h  Ship2Sprite.cpp  Ship2Sprite.h  Ship3Sprite.cpp  Ship3Sprite.h  Ship4Sprite.cpp  Ship4Sprite.h  image_enum.h
Projects/BouncingBall/: BouncingBall.cpp  BouncingBall.h
Projects/Card/: Card.cpp  Card.h  Card_Main.cpp  Card_Main.h  rank_enum.h  suit_enum.h
Projects/PingPong/: Paddle.cpp  Paddle.h  Pong.cpp  Pong.h  PongBall.cpp  PongBall.h
Projects/Poker/: CardHand.cpp  CardHand.h  CardHandScorer.cpp  CardHandScorer.h  Deck.cpp  Deck.h  DrawableCard.cpp  DrawableCard.h  DrawableScore.cpp  DrawableScore.h  Poker.cpp  Poker.h  PokerCard.cpp  PokerCard.h  PokerScore.cpp  PokerScore.h
Projects/TopHatGuy/: TopHatGuy.cpp  TopHatGuy.h
SFMLTools/: Application.cpp  Application.h  Component.cpp  Component.h  EventHandleable.cpp  EventHandleable.h  MouseEvent.cpp  MouseEvent.h
images/: Screen Recording 2023-01-16 at 3.51.18 PM.mov
